Enforce GraphQL security, add error handling, and adopt Relay mutation payloads
- Add @PreAuthorize annotations to all resolvers enforcing @authenticated/@hasRole directives
- Add GraphQL-specific exception handler mapping domain exceptions to typed errors
- Convert all mutations to Relay-style payload types (result + errors list)
- Replace Map<String,Object> returns in RetrievalResolver with typed records
- Replace instanceof chains in metrics resolvers with typed wrapper DTOs
- Align RetrievalStatusEnum 1:1 with Java ComicRetrievalStatus enum
- Add query depth limiting (max 10) via MaxQueryDepthInstrumentation
- Remove unused LocalTime scalar, fix constructor injection, derive errorCodes from enum
- Remove WebSecurityCustomizer in favor of existing permitAll rules
- Update integration tests for new payload return types